reflect-demo/tests/errors/invalid_reflect_on_nested_struct_twice.stderr
error[E0277]: the trait bound `TestStructNested: Input` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct_twice.rs:3:9
  |
3 |     _f: TestStructNested,
  |         ^^^^^^^^^^^^^^^^ the trait `Input` is not implemented for `TestStructNested`
  |
  = help: the following other types implement trait `Input`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others

error[E0277]: the trait bound `TestStructNested: Input` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct_twice.rs:4:10
  |
4 |     _f2: TestStructNested,
  |          ^^^^^^^^^^^^^^^^ the trait `Input` is not implemented for `TestStructNested`
  |
  = help: the following other types implement trait `Input`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
